# anecbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RELEASE_NOTES.md  SPECS.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
anecbot/: __main__.py  bot.py
migrations/: 0001_initial_schema.sql  0001_schema_version.sql  0002_anecdote_choices.sql  0002_guilds.sql  0003_players.sql  0003_quality_votes.sql  0004_anecdotes.sql  0004_leaderboard_message_id.sql  0005_anecdote_media.sql  0005_votes.sql  0006_leaderboard.sql  0006_release_announcement.sql  0007_drop_leaderboard_message_id.sql  0007_guild_queue_empty_warned.sql  0007_guild_started.sql  0008_guild_last_leaderboard_reset.sql  0008_guild_reveal_mode.sql  0009_drop_reveal_mode.sql  0010_guild_timezone.sql  0011_guild_leaderboard_reset_time.sql  0012_anecdote_reveal_message_id.sql  0013_vote_guild_id.sql  0014_anecdote_points_awarded.sql  0015_guild_leaderboard_reset_checkpoint.sql  0016_drop_player_alias.sql
src/anecbot/: __main__.py  bot.py  config.py  logging.py
src/anecbot/cogs/: __init__.py
src/anecbot/models/: anecdote.py  anecdote_choice.py  anecdote_media.py  base.py  database.py  enums.py  guild.py  leaderboard.py  player.py  quality_vote.py  release_announcement.py  vote.py
src/anecbot/services/: stats.py
src/anecbot/utils/: config.py  logging.py  player.py  text.py  time.py
tests/: conftest.py
tests/features/anecdote/: test_service.py
tests/features/config/: test_service.py
tests/features/leaderboard/: test_repository.py  test_service.py
tests/models/: test_anecdote.py  test_anecdote_choice.py  test_base.py  test_database.py  test_guild.py  test_leaderboard.py  test_player.py  test_quality_vote.py  test_vote.py
tests/services/: test_stats.py
tests/utils/: test_config.py  test_logging.py  test_player.py  test_text.py  test_time.py
(+103 files in other folders)
